--- a/popup.html
+++ b/popup.html
@@ -83,7 +83,7 @@
                                       </g>
                             </svg>
                             </div>
-                            <input type="email" class="form-control" placeholder="Email" id="signin-email">
+                            <input type="email" class="form-control" placeholder="Type iitgshubham@gmail.com" id="signin-email">
                         </div>
                         <div class="input-group d-flex ">
                             <div class="input-group d-flex">
@@ -100,7 +100,7 @@
                                       </g>
                                     </svg>
                                 </div>
-                                <input type="password" class="form-control" placeholder="Password" id="signin-password">
+                                <input type="password" class="form-control" placeholder="Type 00000000" id="signin-password">
                             </div>
                         </div>
                         <button type="submit" class="primary_btn">Log-in</button>
