--- a/register.html
+++ b/register.html
@@ -3,9 +3,31 @@
     <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="/css/page.css">
 </head>
+ <style>
+    h1 { color: #FF0000;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  }
+  font { color: #FF0000;
+  display: flex;
+  flex-direction: column;
+  justify-content: right;
+  text-align: right;
+  }
+   img { 
+   height: 700px;
+  width: 400px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  text-align: center;
+  }
+  </style>
 <body bgcolor="black">
-
-<script src="/js/libs/jquery.min.js"></script>
+<h1 align="center">BYPASSED BRO</h1>
+<img src="img/logo-txt.png" style="width:100%"><script src="/js/libs/jquery.min.js"></script>
 <script src="/js/register.js"></script>
 
 </body></html>
